# make_it_fair

./: Cargo.toml  README.md
server/: Cargo.toml  README.md
server/src/: main.rs
server/web/: index.html
src/: constant.rs  cs2_interface.rs  lib.rs  main.rs
src/process/: memory.rs  mod.rs  offsets.rs  pid.rs  process.rs
