[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
dotenv = "0.15.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
make_it_fair = { path = "../" }
axum = { version = "0.7.9", features = ["ws"] }
serde_json = "1.0.133"
tower-http = { version = "0.6.1", features = ["fs"] }
